[package]
name = "wireplumber-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.wireplumber_0_5]
name = "wireplumber-0.5"
version = "0.5"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[dependencies]
libc = "0.2"
pipewire-sys = "0.8.0"
libspa-sys = "0.8.0"
gio-sys = "0.19.5"
glib-sys = "0.19.5"
gobject-sys = "0.19.5"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
